# mt-amd

./: .gitignore  CMakeLists.txt  README.md  environment.yml
examples/: dumbbell.mtx  test.mtx
include/paramd/: paramd.h
plots/: scaling.csv  scaling.html
scripts/: all.sh  breakdown.sh  build.sh  distribution.sh  download.sh  plot.py  scaling.sh  tuning.sh
src/: config.cpp  matrix.cpp  paramd.cpp  paramd_optimized.cpp  utils.cpp
